<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesap"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@android:dimen/notification_large_icon_height">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/kullanıcı_adı"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ad"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSurname"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/soyad"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sehir"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtBirthDate"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="date" />

        <Button
            android:id="@+id/button"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@string/kaydol"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>