<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesap"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/kullanıcı_adı"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ad"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSurname"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/soyad"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sehir"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtBirthDate"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="date" />
    </LinearLayout>

    <Button
        android:id="@+id/btnregister"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:hint="@string/kaydol"
        android:textColorHint="@android:color/background_light"
        android:textSize="16sp" />

</LinearLayout>