<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainreal"
    android:gravity="center|top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ford"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="Ford Otosan Başvuru"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ad"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSurname"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/soyad"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/yas"
            android:inputType="text|number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtJob"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meslek"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTel"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefon"
            android:inputType="text|number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnapply"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:hint="@string/apply"
        android:textColorHint="@android:color/background_light"
        android:textSize="16sp" />

</LinearLayout>