<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="111dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/logonoborder" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:hint="@string/catch_survey"
            android:textColorHint="@color/colorPrimary"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:padding="35dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_horizontal|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/txtMail"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_shape"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                tools:targetApi="o" />
        </LinearLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="285dp"
            android:layout_height="52dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/giris"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="180dp"
                android:layout_height="26dp"
                android:layout_weight="1"
                android:hint="@string/unuttun"
                android:onClick="PasswordActivity"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1"
                android:hint="@string/hesap"
                android:onClick="register"
                android:textAllCaps="false"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>