<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:hint="@string/forpass"
        android:textColorHint="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:padding="35dp"
        android:layout_marginBottom="180dp"/>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtrespass"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btnforpass"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:background="@drawable/buttonshape"
        android:hint="@string/respass"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textSize="16sp"
        android:layout_marginBottom="90dp"/>
</LinearLayout>